tests/ui/rfc-2457/crate_name_nonascii_forbidden-2.rs
// compile-flags:--extern му_сгате
// edition:2018

use му_сгате::baz; //~  ERROR cannot load a crate with a non-ascii name `му_сгате`

fn main() {}

// ferrocene-annotations: fls_gklst7joeo33
// External Crates
// ferrocene-annotations: fls_21vnag69kbwe
// Identifiers
// ferrocene-annotations: fls_9gprp17h6t1q
// Use Imports
